[package]
name = "childcare-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ulid = "1.1.2"
dotenv = "0.15.0"
derive-new = "0.6.0"
serde_json = "1.0.115"
async-std = "1.12.0"
async-trait = "0.1.80"
thiserror = "1.0.61"
validator = { version = "0.18.1", features = ["derive"] }
axum = { version = "0.7.4",  features = ["multipart"] }
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
anyhow = { version = "1.0.82", features = ["backtrace"] }
sqlx = { version = "0.7.4", features = ["mysql", "runtime-tokio-native-tls", "chrono", "migrate"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.9", features = ["json"] }